<resources>
    <string name="app_name">USSDMobile</string>
    <string name="beeline">Beeline</string>
    <string name="balans">Balans</string>
    <string name="uzb">UZB</string>
    <string name="rus">RUS</string>
    <string name="internet">INTERNET</string>
    <string name="tariflar">Tariflar</string>
    <string name="sms_daqiqalar">SMS va DAQIQA</string>
    <string name="ussd_kod">USSD kod</string>
    <string name="birkunga">1 kunga</string>
    <string name="yettikunga">7 kunga</string>
    <string name="ottizkunga">30 kunga</string>
    <string name="yuzMb">100 MB</string>
    <string name="ulanishNarxi1">Ulanish narxi: 2 000 so\'m</string>
    <string name="yonalishlarUcun1">Barcha yo\'nalishlaar uchun</string>
    <string name="ikkiyuzMb">200 MB</string>
    <string name="ulanishNarxi2">Ulanish narxi: 5 000 so\'m</string>
    <string name="yonalishlarUchun2">Barcha yo\'nalishlar uchun</string>
    <string name="beshyuzMb">500 MB</string>
    <string name="ulanishNarxi3">Ulanish narxi: 5000 so\'m </string>
    <string name="yonalishlarUchun3">Barcha yo\'nalishlar uchun</string>
    <string name="tortGb">4 GB</string>
    <string name="ulanishNarxi4">Ulanish narxi: 10 000 so\'m </string>
    <string name="yonalishlarUchun4">Barcha yo\'nalishlar uchun</string>
    <string name="uchGB">3000 MB</string>
    <string name="haftatolov1">Ulanish narxi: 18 000 so\'m</string>
    <string name="yonalishGb1">Barcha yo\'nalishlaar uchun</string>
    <string name="beshGb">5 GB</string>
    <string name="haftatolov2">Ulanish narxi: 28 000 so\'m</string>
    <string name="yonalishGb2">Barcha yo\'nalishlar uchun</string>
    <string name="yettiGB">7 GB</string>
    <string name="haftatolov3">Ulanish narxi: 30 000 so\'m</string>
    <string name="yonalishGb3">Barcha yo\'nalishlar uchun</string>
    <string name="on_GB">10 GB</string>
    <string name="haftaTolov4">Ulanish narxi: 50 000 so\'m</string>
    <string name="yonalishGb4">Barcha yo\'nalishlar uchun</string>
    <string name="uchGB_oyiga1">3000 MB</string>
    <string name="oylik_tolov1">Ulanish narxi: 18 000 so\'m</string>
    <string name="yonalish_oylik1">Barcha yo\'nalishlaar uchun</string>
    <string name="beshGb_oyiga2">5 GB</string>
    <string name="oylik_tolov2">Ulanish narxi: 28 000 so\'m</string>
    <string name="yonalish_oylik2">Barcha yo\'nalishlar uchun</string>
    <string name="yettiGB_oyiga3">7 GB</string>
    <string name="oylik_tolov3">Ulanish narxi: 30 000 so\'m</string>
    <string name="yonalish_oylik3">Barcha yo\'nalishlar uchun</string>
    <string name="onGB_oyiga4">10 GB</string>
    <string name="oylik_tolov4">Ulanish narxi: 50 000 so\'m</string>
    <string name="ypnalish_oylik">Barcha yo\'nalishlar uchun</string>
    <string name="tariflarr">TARIFLAR</string>
    <string name="yangi">Yangi</string>
    <string name="status">Status</string>
    <string name="oddiy">Oddiy</string>
    <string name="hammasi_zor1">Hammasi</string>
    <string name="zor_1">ZO\'R 1</string>
    <string name="tolov_zor1">20 000 so\'m Oylik abonent to\'lovi</string>
    <string name="batafsil_zor1">Batafsil</string>
    <string name="hammasi_zor2">Hammasi</string>
    <string name="zor_2">ZO\'R 2</string>
    <string name="tolov_zor2">30 000 so\'m oylik abonent to\'lovi</string>
    <string name="batafsil_zor2">Batafsil</string>
    <string name="hammasi_zor3">Hammasi</string>
    <string name="zor_3">ZO\'R 3</string>
    <string name="tolov_zor3">40 000 so\'m oylik abonent to\'lovi</string>
    <string name="batafsil_zor3"> Batafsil </string>
    <string name="hammasi_zor4">Hammasi</string>
    <string name="zor_4">ZO\'R 4</string>
    <string name="tolov_zor4">50 000 so\'m oylik abonent to\'lovi</string>
    <string name="batafsil_zor4">Batafsil</string>
    <string name="hammasi_zor1_status">Hammasi</string>
    <string name="zor_1_status">ZO\'R 1</string>
    <string name="tolov_zor1_status">20 000 so\'m oylik abonent to\'lovi</string>
    <string name="batafsil_zor1_status">Batafsil</string>
    <string name="hammasi_zor2_status">Hammasi</string>
    <string name="zor_2_status">ZO\'R 2</string>
    <string name="tolov_zor2_status">30 000 so\'m oylik abonent to\'lovi</string>
    <string name="batafsil_zor2_status">Batafsil</string>
    <string name="hammasi_zor3_status">Hammasi</string>
    <string name="zor_3_status">ZO\'R 3</string>
    <string name="tolov_zor3_status">40 000 so\'m oylik abonent to\'lovi</string>
    <string name="batafsil_zor3_status"> Batafsil </string>
    <string name="hammasi_zor4_status">Hammasi</string>
    <string name="zor_4_status">ZO\'R 4</string>
    <string name="tolov_zor4_status">50 000 so\'m oylik abonent to\'lovi</string>
    <string name="batafsil_zor4_status">Batafsil</string>
    <string name="hammasi_zor1_oddiy">Hammasi</string>
    <string name="zor_1_oddiy">ZO\'R 1</string>
    <string name="tolov_zor1_oddiy">20 000 so\'m oylik abonent to\'lovi</string>
    <string name="batafsil_zor1_oddiy">Batafsil</string>
    <string name="hammasi_zor2_oddiy">Hammasi</string>
    <string name="zor_2_oddiy">ZO\'R 2</string>
    <string name="tolov_zor2_oddiy">30 000 so\'m oylik abonent to\'lovi</string>
    <string name="batafsil_zor2_oddiy">Batafsil</string>
    <string name="hammasi_zor3_oddiy">Hammasi</string>
    <string name="zor_3_oddiy">ZO\'R 3</string>
    <string name="tolov_zor3_oddiy">40 000 so\'m oylik abonent to\'lovi</string>
    <string name="batafsil_zor3_oddiy"> Batafsil </string>
    <string name="hammasi_zor4_oddiy">Hammasi</string>
    <string name="zor_4_oddiy">ZO\'R 4</string>
    <string name="tolov_zor4_oddiy">50 000 so\'m oylik abonent to\'lovi</string>
    <string name="batafsil_zor4_oddiy">Batafsil</string>
    <string name="smslar">SMS</string>
    <string name="sms_1">100 SMS</string>
    <string name="sms_narxi1">Ulanish narxi: 5048.5 so\'m</string>
    <string name="batafsil_1">Batafsil</string>
    <string name="sms_2">100 SMS</string>
    <string name="sms_narxi2">Ulanish narxi: 5048.5 so\'m</string>
    <string name="batafsil_2">Batafsil</string>
    <string name="sms_3">100 SMS</string>
    <string name="sms_narxi3">Ulanish narxi: 5048.5 so\'m</string>
    <string name="batafsil_3">Batafsil</string>
    <string name="kunlik_50daqiqa">50 Daqiqa</string>
    <string name="kunlik_daqiqa_narxi">Daqiqa narxi: 1 000 so\'m</string>
    <string name="daqiqa_yonalishi">Barcha yo\'nalishlar uchun</string>
    <string name="kunlik_100daqiqa">100 Daqiqa</string>
    <string name="kunlik_daqiqa_narxi_100">3 000 so\'m</string>
    <string name="daqiqa_yonalishi_100">Barcha yo\'nalishlar uchun</string>
    <string name="kunlik_120daqiqa">100 Daqiqa</string>
    <string name="kunlik_daqiqa_narxi_120">5 000 so\'m</string>
    <string name="daqiqa_yonalishi_120">Barcha yo\'nalishlar uchun</string>
    <string name="app_name_uzmobile">USSDMobile</string>
    <string name="uzmobile">Uzmobile</string>
    <string name="balans_uzmobile">Balans</string>
    <string name="uzb_uzmobile">UZB</string>
    <string name="rus_uzmobile">RUS</string>
    <string name="internet_uzmobile">INTERNET</string>
    <string name="tariflar_uzmobile">Tariflar</string>
    <string name="sms_daqiqalar_uzmobile">SMS va DAQIQA</string>
    <string name="ussd_kod_uzmobile">USSD kod</string>
    <string name="internet_mb_uzmobile">INTERNET</string>
    <string name="birkunga_uzmobile">1 kunga</string>
    <string name="yettikunga_uzmobile">7 kunga</string>
    <string name="ottizkunga_uzmobile">30 kunga</string>
    <string name="yuzMb_uzmobile">100 MB</string>
    <string name="ulanishNarxi1_uzmobile">Ulanish narxi: 2 000 so\'m</string>
    <string name="yonalishlarUcun1_uzmobile">Barcha yo\'nalishlaar uchun</string>
    <string name="ikkiyuzMb_uzmobile">200 MB</string>
    <string name="ulanishNarxi2_uzmobile">Ulanish narxi: 5 000 so\'m</string>
    <string name="yonalishlarUchun2_uzmobile">Barcha yo\'nalishlar uchun</string>
    <string name="beshyuzMb_uzmobile">500 MB</string>
    <string name="ulanishNarxi3_uzmobile">Ulanish narxi: 5000 so\'m </string>
    <string name="yonalishlarUchun3_uzmobile">Barcha yo\'nalishlar uchun</string>
    <string name="tortGb_uzmobile">4 GB</string>
    <string name="ulanishNarxi4_uzmobile">Ulanish narxi: 10 000 so\'m </string>
    <string name="yonalishlarUchun4_uzmobile">Barcha yo\'nalishlar uchun</string>
    <string name="uchGB_uzmobile">3000 MB</string>
    <string name="haftatolov1_uzmobile">Ulanish narxi: 18 000 so\'m</string>
    <string name="yonalishGb1_uzmobile">Barcha yo\'nalishlaar uchun</string>
    <string name="beshGb_uzmobile">5 GB</string>
    <string name="haftatolov2_uzmobile">Ulanish narxi: 28 000 so\'m</string>
    <string name="yonalishGb2v">Barcha yo\'nalishlar uchun</string>
    <string name="yettiGB_uzmobile">7 GB</string>
    <string name="haftatolov3_uzmobile">Ulanish narxi: 30 000 so\'m</string>
    <string name="yonalishGb3_uzmobile">Barcha yo\'nalishlar uchun</string>
    <string name="on_GB_uzmobile">10 GB</string>
    <string name="haftaTolov4_uzmobile">Ulanish narxi: 50 000 so\'m</string>
    <string name="yonalishGb4_uzmobile">Barcha yo\'nalishlar uchun</string>
    <string name="uchGB_oyiga1_uzmobile">3000 MB</string>
    <string name="oylik_tolov1_uzmobile">Ulanish narxi: 18 000 so\'m</string>
    <string name="yonalish_oylik_uzmobile1">Barcha yo\'nalishlaar uchun</string>
    <string name="beshGb_oyiga2_uzmobile">5 GB</string>
    <string name="oylik_tolov2_uzmobile">Ulanish narxi: 28 000 so\'m</string>
    <string name="yonalish_oylik2_uzmobile">Barcha yo\'nalishlar uchun</string>
    <string name="yettiGB_oyiga3_uzmobile">7 GB</string>
    <string name="oylik_tolov3_uzmobile">Ulanish narxi: 30 000 so\'m</string>
    <string name="yonalish_oylik3_uzmobile">Barcha yo\'nalishlar uchun</string>
    <string name="onGB_oyiga4_uzmobile">10 GB</string>
    <string name="oylik_tolov4_uzmobile">Ulanish narxi: 50 000 so\'m</string>
    <string name="ypnalish_oylik_uzmobile">Barcha yo\'nalishlar uchun</string>
    <string name="tariflarr_uzmobile">TARIFLAR</string>
    <string name="yangi_uzmobile">Yangi</string>
    <string name="status_uzmobile">Status</string>
    <string name="oddiy_uzmobile">Oddiy</string>
    <string name="hammasi_zor1_uzmobile">Hammasi</string>
    <string name="zor_1_uzmobile">ZO\'R 1</string>
    <string name="tolov_zor1_uzmobile">20 000 so\'m Oylik abonent to\'lovi</string>
    <string name="batafsil_zor1_uzmobile">Batafsil</string>
    <string name="hammasi_zor2_uzmobile">Hammasi</string>
    <string name="zor_2_uzmobile">ZO\'R 2</string>
    <string name="tolov_zor2_uzmobile">30 000 so\'m oylik abonent to\'lovi</string>
    <string name="batafsil_zor2_uzmobile">Batafsil</string>
    <string name="hammasi_zor3_uzmobile">Hammasi</string>
    <string name="zor_3_uzmobile">ZO\'R 3</string>
    <string name="tolov_zor3_uzmobile">40 000 so\'m oylik abonent to\'lovi</string>
    <string name="batafsil_zor3_uzmobile"> Batafsil </string>
    <string name="hammasi_zor4_uzmobile">Hammasi</string>
    <string name="zor_4_uzmobile">ZO\'R 4</string>
    <string name="tolov_zor4_uzmobile">50 000 so\'m oylik abonent to\'lovi</string>
    <string name="batafsil_zor4_uzmobile">Batafsil</string>
    <string name="hammasi_zor1_status_uzmobile">Hammasi</string>
    <string name="zor_1_status_uzmobile">ZO\'R 1</string>
    <string name="tolov_zor1_status_uzmobile">20 000 so\'m oylik abonent to\'lovi</string>
    <string name="batafsil_zor1_status_uzmobile">Batafsil</string>
    <string name="hammasi_zor2_status_uzmobile">Hammasi</string>
    <string name="zor_2_status_uzmobile">ZO\'R 2</string>
    <string name="tolov_zor2_status_uzmobile">30 000 so\'m oylik abonent to\'lovi</string>
    <string name="batafsil_zor2_status_uzmobile">Batafsil</string>
    <string name="hammasi_zor3_status_uzmobile">Hammasi</string>
    <string name="zor_3_status_uzmobile">ZO\'R 3</string>
</resources>